--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -10,41 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  CV_check\n",
-      "  EDA1/wip\n",
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "* feat6/wip\n",
-      "  feat7(EDA1)/wip\n",
-      "  master\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git branch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +19,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: pathspec 'feat7(EDA)/wip' did not match any file(s) known to git.\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTest_data.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
@@ -65,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -74,9 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat6/wip 29a0667] Created submission file\n",
-      " 1 file changed, 1192 insertions(+), 957 deletions(-)\n",
-      " rewrite Test_data.ipynb (68%)\n",
+      "[feat6/wip a367ec4] Dummy push\n",
+      " 1 file changed, 40 insertions(+), 207 deletions(-)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
