Modified head markdown

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feat7/wip (Acc: on test set 0.8156424)\n",
+    "### Feat7/wip (Acc: on test set 0.8256)\n",
     "#### Slightly worse than feat2\n",
     "Branced from EDA1 for feature engineering based on knowledge obtained from EDA\n",
     "- Assign age to NaN values based on initials\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -324,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip 4e17e8f] Finished model training moving on to creating submission file\n",
-      " 1 file changed, 638 insertions(+), 335 deletions(-)\n",
+      "[feat7(EDA1)/wip 11d36d8] Finished training\n",
+      " 2 files changed, 336 insertions(+), 408 deletions(-)\n",
       "Branch feat7(EDA1)/wip set up to track remote branch feat7(EDA1)/wip from origin.\n"
      ]
     },
@@ -334,7 +334,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   62cf47e..4e17e8f  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
+      "   4e17e8f..11d36d8  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
      ]
     }
    ],
@@ -342,7 +342,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Finished training'\n",
+    "git commit -m 'Modified head markdown'\n",
     "git push --set-upstream origin 'feat7(EDA1)/wip'"
    ]
   },
