Created submission File

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -324,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip 11d36d8] Finished training\n",
-      " 2 files changed, 336 insertions(+), 408 deletions(-)\n",
+      "[feat7(EDA1)/wip d119015] Modified head markdown\n",
+      " 1 file changed, 6 insertions(+), 6 deletions(-)\n",
       "Branch feat7(EDA1)/wip set up to track remote branch feat7(EDA1)/wip from origin.\n"
      ]
     },
@@ -334,7 +334,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   4e17e8f..11d36d8  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
+      "   11d36d8..d119015  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
      ]
     }
    ],
