Dummuy commit before branching

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -75,12 +75,13 @@
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout feat7(EDA1)/wip\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -89,9 +90,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[EDA1/wip 41eb6cb] Finised embarked feature analysis, fill Nan with \"S\"\n",
-      " 1 file changed, 310 insertions(+), 224 deletions(-)\n",
-      "Branch EDA1/wip set up to track remote branch EDA1/wip from origin.\n"
+      "[EDA2/wip 69a2cc6] Added code to create new feature: relatives (yes/no)\n",
+      " 1 file changed, 445 insertions(+), 377 deletions(-)\n",
+      "Branch EDA2/wip set up to track remote branch EDA2/wip from origin.\n"
      ]
     },
     {
@@ -99,14 +100,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   1ecd7d8..41eb6cb  EDA1/wip -> EDA1/wip\n"
+      " * [new branch]      EDA2/wip -> EDA2/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
-    "git commit -m 'Added code to create new feature: relatives (yes/no)'\n",
+    "git commit -m 'Dummuy commit before branching'\n",
     "git push --set-upstream origin EDA2/wip"
    ]
   },
