Dummuy commit before branching

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -45,43 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  CV_check\n",
-      "  EDA1/wip\n",
-      "* EDA2/wip\n",
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "  feat6/wip\n",
-      "  feat7(EDA1)/wip\n",
-      "  master\n"
+      "bash: line 1: syntax error near unexpected token `('\n",
+      "bash: line 1: `git checkout feat7(EDA1)/wip'\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout feat7(EDA1)/wip\n",
+    "git checkout 'feat7(EDA1)/wip'\n",
     "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -90,8 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[EDA2/wip 69a2cc6] Added code to create new feature: relatives (yes/no)\n",
-      " 1 file changed, 445 insertions(+), 377 deletions(-)\n",
+      "[EDA2/wip 251235a] Dummuy commit before branching\n",
+      " 1 file changed, 9 insertions(+), 8 deletions(-)\n",
       "Branch EDA2/wip set up to track remote branch EDA2/wip from origin.\n"
      ]
     },
@@ -100,7 +86,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      " * [new branch]      EDA2/wip -> EDA2/wip\n"
+      "   69a2cc6..251235a  EDA2/wip -> EDA2/wip\n"
      ]
     }
    ],
