Branched to feat8(EDA2)

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -30,17 +30,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTest_data.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
+      "Switched to a new branch 'feat8(EDA2)/wip'\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'EDA1/wip'\n",
-    "git fetch"
+    "git checkout -b 'feat8(EDA2)/wip'"
    ]
   },
   {
@@ -72,8 +68,8 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Submitted to Kaggle, Dummy Commit to change branch'\n",
-    "git push --set-upstream origin 'feat7(EDA1)/wip'"
+    "git commit -m 'Branched to feat8(EDA2)'\n",
+    "git push --set-upstream origin 'feat8(EDA2)/wip'"
    ]
   },
   {
