Added code to create new feature relatives

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,9 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feat7/wip (Acc: on test set 0.8256)\n",
-    "#### Slightly worse than feat2\n",
-    "Branced from EDA1 for feature engineering based on knowledge obtained from EDA\n",
+    "### Feat8/wip (Acc: on test set xxx?)\n",
+    "\n",
+    "Branced from EDA1 for feature engineering based on knowledge obtained from EDA2\n",
+    "(Add 1 new feature, relatives yes/no)\n",
     "- Assign age to NaN values based on initials\n",
     "- Assign S to NaN values\n",
     "- Dropped Cabin, name, ticket and passengerID"
@@ -36,12 +37,12 @@
    ],
    "source": [
     "%%bash\n",
-    "git checkout -b 'feat8(EDA2)/wip'"
+    "git log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -50,9 +51,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip d119015] Modified head markdown\n",
-      " 1 file changed, 6 insertions(+), 6 deletions(-)\n",
-      "Branch feat7(EDA1)/wip set up to track remote branch feat7(EDA1)/wip from origin.\n"
+      "[feat8(EDA2)/wip 51a4549] Branched to feat8(EDA2)\n",
+      " 1 file changed, 5 insertions(+), 9 deletions(-)\n",
+      "Branch feat8(EDA2)/wip set up to track remote branch feat8(EDA2)/wip from origin.\n"
      ]
     },
     {
@@ -60,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   11d36d8..d119015  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
+      " * [new branch]      feat8(EDA2)/wip -> feat8(EDA2)/wip\n"
      ]
     }
    ],
@@ -68,7 +69,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Branched to feat8(EDA2)'\n",
+    "git commit -m 'Added code to create new feature relatives'\n",
     "git push --set-upstream origin 'feat8(EDA2)/wip'"
    ]
   },
@@ -1349,6 +1350,24 @@
    ],
    "source": [
     "X.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Relatives Feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X['Relatives'] = pd.Series((X['SibSp']==0) & (X['Parch']==0), index=X.index)"
    ]
   },
   {
