Finish training, creating submission file

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "## Test Data Prediction\n",
-    "### Feat7\n",
+    "### Feat8\n",
     "This notebook will be used to open test.csv file and use designated model to predict the test data for kaggle submission."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -22,6 +22,7 @@
      "text": [
       "  CV_check\n",
       "  EDA1/wip\n",
+      "  EDA2/wip\n",
       "  cost1/feat1/wip\n",
       "  cost1/feat2/wip\n",
       "  cost1/wip\n",
@@ -33,7 +34,8 @@
       "  feat4/wip\n",
       "  feat5/wip\n",
       "  feat6/wip\n",
-      "* feat7(EDA1)/wip\n",
+      "  feat7(EDA1)/wip\n",
+      "* feat8(EDA2)/wip\n",
       "  master\n"
      ]
     }
@@ -72,8 +74,8 @@
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
     "git add 'Titanic.ipynb'\n",
-    "git commit -m 'Created submission File'\n",
-    "git push --set-upstream origin master"
+    "git commit -m 'Finish training, creating submission file'\n",
+    "git push --set-upstream origin 'feat8(EDA2)/wip'"
    ]
   },
   {
@@ -358,6 +360,9 @@
     "X = X.drop('Initial',axis=1)\n",
     "test = test.drop('Name',axis=1)\n",
     "test = test.drop('Initial',axis =1)\n",
+    "\n",
+    "X['Relatives'] = pd.Series((X['SibSp']==0) & (X['Parch']==0), index=X.index)\n",
+    "test['Relatives'] = pd.Series((test['SibSp']==0) & (test['Parch']==0), index=test.index)\n",
     "\n",
     "num_attri = ['Age','SibSp','Parch','Fare']\n",
     "cat_attri = [column for column in X if (column not in num_attri and column != 'Survived')]\n",
