--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feat8/wip (Acc: on test set xxx?)\n",
+    "### Feat8/wip (Acc: on test set 0.7988?)\n",
     "\n",
     "Branced from EDA1 for feature engineering based on knowledge obtained from EDA2\n",
     "(Add 1 new feature, relatives yes/no)\n",
@@ -69,7 +69,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Added code to create new feature relatives'\n",
+    "git commit -m 'Modified Markdown on both files'\n",
     "git push --set-upstream origin 'feat8(EDA2)/wip'"
    ]
   },
