--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feat8/wip (Acc: on test set 0.7988?)\n",
+    "### Feat8/wip (Acc: on test set 0.7988)\n",
     "\n",
     "Branced from EDA1 for feature engineering based on knowledge obtained from EDA2\n",
     "(Add 1 new feature, relatives yes/no)\n",
@@ -22,27 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Switched to a new branch 'feat8(EDA2)/wip'\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -51,8 +31,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat8(EDA2)/wip bc109d6] Added code to create new feature relatives\n",
-      " 1 file changed, 29 insertions(+), 10 deletions(-)\n",
+      "  CV_check\n",
+      "  EDA1/wip\n",
+      "  EDA2/wip\n",
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "  feat2/wip\n",
+      "  feat3/wip\n",
+      "  feat4/wip\n",
+      "  feat5/wip\n",
+      "  feat6/wip\n",
+      "  feat7(EDA1)/wip\n",
+      "* feat8(EDA2)/wip\n",
+      "  master\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git checkout 'EDA1/wip'\n",
+    "git fetch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[feat8(EDA2)/wip fc8d9fe] Modified Markdown on both files\n",
+      " 2 files changed, 43 insertions(+), 49 deletions(-)\n",
       "Branch feat8(EDA2)/wip set up to track remote branch feat8(EDA2)/wip from origin.\n"
      ]
     },
@@ -61,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   51a4549..bc109d6  feat8(EDA2)/wip -> feat8(EDA2)/wip\n"
+      "   01e4986..fc8d9fe  feat8(EDA2)/wip -> feat8(EDA2)/wip\n"
      ]
     }
    ],
@@ -69,7 +86,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Modified Markdown on both files'\n",
+    "git commit -m 'Branching, dummy commit'\n",
     "git push --set-upstream origin 'feat8(EDA2)/wip'"
    ]
   },
