--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -31,35 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  CV_check\n",
-      "* EDA1/wip\n",
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "  feat6/wip\n",
-      "  master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout 'feat8(EDA2)/wip'\n",
+    "git fetch"
    ]
   },
   {
@@ -90,7 +81,7 @@
    "source": [
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
-    "git commit -m 'Added some summary description at the head of the notebook'\n",
+    "git commit -m 'Dummy commit'\n",
     "git push --set-upstream origin EDA1/wip"
    ]
   },
