--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -64,8 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[EDA1/wip 41eb6cb] Finised embarked feature analysis, fill Nan with \"S\"\n",
-      " 1 file changed, 310 insertions(+), 224 deletions(-)\n",
+      "[EDA1/wip 1174185] Dummy commit\n",
+      " 1 file changed, 9 insertions(+), 18 deletions(-)\n",
       "Branch EDA1/wip set up to track remote branch EDA1/wip from origin.\n"
      ]
     },
@@ -74,7 +74,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   1ecd7d8..41eb6cb  EDA1/wip -> EDA1/wip\n"
+      "   3512d83..1174185  EDA1/wip -> EDA1/wip\n"
      ]
     }
    ],
