Modified the code, prepare for training

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,8 @@
       "  feat5/wip\n",
       "  feat6/wip\n",
       "  feat7(EDA1)/wip\n",
-      "* feat8(EDA2)/wip\n",
+      "  feat8(EDA2)/wip\n",
+      "* feat9/EDA2/wip\n",
       "  master\n"
      ]
     }
@@ -75,7 +76,7 @@
     "git add 'Test_data.ipynb'\n",
     "git add 'Titanic.ipynb'\n",
     "git commit -m 'Finish training, creating submission file'\n",
-    "git push --set-upstream origin 'feat8(EDA2)/wip'"
+    "git push --set-upstream origin 'feat9/EDA2/wip'"
    ]
   },
   {
@@ -358,7 +359,7 @@
     "X['Relatives'] = pd.Series((X['SibSp']==0) & (X['Parch']==0), index=X.index)\n",
     "test['Relatives'] = pd.Series((test['SibSp']==0) & (test['Parch']==0), index=test.index)\n",
     "\n",
-    "num_attri = ['Age','SibSp','Parch','Fare']\n",
+    "num_attri = ['Age','SibSp','Parch','Fare','Pclass']\n",
     "cat_attri = [column for column in X if (column not in num_attri and column != 'Survived')]\n",
     "\n",
     "for column in (cat_attri):\n",
