--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,10 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feat8/wip (Acc: on test set 0.7988)\n",
+    "### Feat9/wip (Acc: on test set xxx)\n",
     "\n",
-    "Branced from EDA1 for feature engineering based on knowledge obtained from EDA2\n",
-    "(Add 1 new feature, relatives yes/no)\n",
+    "Use information from EDA2 \n",
+    "\n",
+    "- Making Pclass numerical feature\n",
+    "- Add 1 new feature, relatives yes/no)\n",
     "- Assign age to NaN values based on initials\n",
     "- Assign S to NaN values\n",
     "- Dropped Cabin, name, ticket and passengerID"
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -46,15 +48,15 @@
       "  feat5/wip\n",
       "  feat6/wip\n",
       "  feat7(EDA1)/wip\n",
-      "* feat8(EDA2)/wip\n",
+      "  feat8(EDA2)/wip\n",
+      "* feat9/EDA2/wip\n",
       "  master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'EDA1/wip'\n",
-    "git fetch"
+    "git branch"
    ]
   },
   {
@@ -86,8 +88,8 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Branching, dummy commit'\n",
-    "git push --set-upstream origin 'feat8(EDA2)/wip'"
+    "git commit -m 'Modified the code, prepare for training'\n",
+    "git push --set-upstream origin 'feat9/EDA2/wip'"
    ]
   },
   {
@@ -1413,7 +1415,7 @@
    },
    "outputs": [],
    "source": [
-    "num_attri = ['Age','SibSp','Parch','Fare']\n",
+    "num_attri = ['Age','SibSp','Parch','Fare','Pclass']\n",
     "cat_attri = [column for column in X if (column not in num_attri and column != 'Survived')]"
    ]
   },
