--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feat9/wip (Acc: on test set xxx)\n",
+    "### Feat9/wip (Acc: on test set 0.832402)\n",
     "\n",
     "Use information from EDA2 \n",
     "\n",
@@ -88,7 +88,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Modified the code, prepare for training'\n",
+    "git commit -m 'Submitted file, modified markdown'\n",
     "git push --set-upstream origin 'feat9/EDA2/wip'"
    ]
   },
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -2134,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -2143,8 +2143,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set AUC score:0.784684684685\n",
-      "Test set Accuracy:0.798882681564\n"
+      "Test set AUC score:0.821235521236\n",
+      "Test set Accuracy:0.832402234637\n"
      ]
     }
    ],
